--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,4 +1,4 @@
 #default: --format pretty
 default: -p html report_name=all
-html: -f html -o test/report/reporte.html --format pretty
+html: -f html -o ../../test/report/reporte.html --format pretty
 menu: -t @menu -p html report_name=menu
