--- a/cucumber.yml
+++ b/cucumber.yml
@@ -2,3 +2,6 @@
 default: -p html report_name=all
 html: -f html -o ../../test/report/reporte.html --format pretty
 menu: -t @menu -p html report_name=menu
+home: -t @home -p html report_name=home
+turnos: -t @turnos -p html report_name=turnos
+
