--- a/cucumber.yml
+++ b/cucumber.yml
@@ -4,4 +4,4 @@ html: -f html -o ../../test/report/reporte.html --format pretty
 menu: -t @menu -p html report_name=menu
 home: -t @home -p html report_name=home
 turnos: -t @turnos -p html report_name=turnos
-
+compartir: -t @compartir -p html report_name=compartir
