--- a/cucumber.yml
+++ b/cucumber.yml
@@ -5,3 +5,9 @@ menu: -t @menu -p html report_name=menu
 home: -t @home -p html report_name=home
 turnos: -t @turnos -p html report_name=turnos
 compartir: -t @compartir -p html report_name=compartir
+login_facebook: -t @login_facebook -p html report_name=login_facebook
+login_google: -t @login_google -p html report_name=login_google
+login_twitter: -t @login_twitter -p html report_name=login_twitter
+login_instagram: -t @login_instagram -p html report_name=login_instagram
+login_youtube: -t @login_youtube -p html report_name=login_youtube
+login: -t @login -p html report_name=login
