--- a/cucumber.yml
+++ b/cucumber.yml
@@ -11,3 +11,12 @@ login_twitter: -t @login_twitter -p html report_name=login_twitter
 login_instagram: -t @login_instagram -p html report_name=login_instagram
 login_youtube: -t @login_youtube -p html report_name=login_youtube
 login: -t @login -p html report_name=login
+compartir_area: -t @compartir_area -p html report_name=compartir_area
+compartir_webform: -t @compartir_webform -p html report_name=compartir_webform
+compartir_subasta: -t @compartir_subasta -p html report_name=compartir_subasta
+compartir_servicio: -t @compartir_servicio -p html report_name=compartir_servicio
+compartir_pagina_libro: -t @compartir_pagina_libro -p html report_name=compartir_pagina_libro
+compartir_pagina: -t @compartir_pagina -p html report_name=compartir_pagina
+compartir_persona_buscada: -t @compartir_persona_buscada -p html report_name=compartir_persona_buscada
+compartir_noticia: -t @compartir_noticia -p html report_name=compartir_noticia
+sube: -t @sube -p html report_name=sube
