feat Tramites y Páginas mas visitados COMPLETO

--- a/cucumber.yml
+++ b/cucumber.yml
@@ -20,3 +20,8 @@ compartir_pagina: -t @compartir_pagina -p html report_name=compartir_pagina
 compartir_persona_buscada: -t @compartir_persona_buscada -p html report_name=compartir_persona_buscada
 compartir_noticia: -t @compartir_noticia -p html report_name=compartir_noticia
 sube: -t @sube -p html report_name=sube
+mas_visitados: -t @mas_visitados -p html report_name=mas_visitados
+paginas: -t @paginas -p html report_name=paginas
+tramites: -t @tramites -p html report_name=tramites
+organismos: -t @organismos -p html report_name=organismos
+todos: -t @todos -p html report_name=todos
